--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,35 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>To Do List</title>
+<%- include("header"); -%>
 
-        <!-- Favicon -->
-        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-
-        <!-- Custom Styles -->
-        <link rel="stylesheet" href="stylesheets/style.css">
-    </head>
-
-    <body>
         <div class="box" id="heading">
-            <h1><%= currentDay %></h1>
+            <h1><%= listTitle %></h1>
         </div>
 
         <div class="box">
-            <% items.forEach(newItem => { %>
-                <div class="item">
-                    <input type="checkbox">
-                    <p><%= newItem %></p>
-                </div> 
-            <% }); %> 
+        <% newListItem.forEach(item => { %>
+            <div class="item">
+                <input type="checkbox">
+                <p><%= item %></p>
+            </div> 
+        <% }); %> 
 
             <form class="item" action="/" method="post">
                 <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required autofocus>
-                <button type="submit" name="buton">+</button>
+                <button type="submit" name="list" value=<%= listTitle %>>+</button>
             </form>
         </div>
 
-    </body>
-</html>
+<%- include("footer"); -%> 
