--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,16 +5,19 @@
         </div>
 
         <div class="box">
-        <% newListItem.forEach(item => { %>
-            <div class="item">
-                <input type="checkbox">
-                <p><%= item %></p>
-            </div> 
+        <% newListItems.forEach(item => { %>
+            <form action="/delete" method="post">
+                <div class="item">
+                    <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
+                    <p><%= item.name %></p>
+                </div>
+                <input type="hidden" name="listName" value="<%= listTitle %>">
+            </form> 
         <% }); %> 
 
             <form class="item" action="/" method="post">
                 <input type="text" name="newItem" placeholder="New Item" autocomplete="off" required autofocus>
-                <button type="submit" name="list" value=<%= listTitle %>>+</button>
+                <button type="submit" name="list" value="<%= listTitle %>">+</button>
             </form>
         </div>
 
